Correction du nginx pour l'accès à l'API et correction du backend pur la route /api/upload

--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -30,8 +30,11 @@ services:
     build:
       context: backend/
       dockerfile: Dockerfile
+    # ports:
+    #   - 8080:8080
     volumes:
       - ./backend:/src/app
+      - ./backend/storage:/storage
     environment:
       PGHOST: postgres
       PGDATABASE: testdb
@@ -43,6 +46,7 @@ services:
       ADMIN_USERNAME: admin
       ADMIN_PASSWORD: admin
       ADMIN_EMAIL: admin@admin.admin
+      FILE_STORAGE: /storage/
     command: node --trace-deprecation --unhandled-rejections=strict /src/app/server.js
 
   frontend:
