--- a/nginx/site.dev.conf
+++ b/nginx/site.dev.conf
@@ -23,7 +23,7 @@ server {
     add_header X-pass-by '=/';
   }
 
-  location /api {
+  location ~ ^/api {
     proxy_pass http://backend:8080;
     proxy_redirect     off;
 
@@ -36,7 +36,7 @@ server {
     add_header X-pass-by '/api';
   }
 
-  location / {
+  location ~ ^/(?!api) {
     proxy_pass http://frontend:8080;
     proxy_redirect     off;
 
