--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -26,7 +26,7 @@ server {
     proxy_set_header   X-Forwarded-Proto    $scheme;
   }
 
-  location /api {
+  location ~ /api {
     proxy_pass http://backend:8080;
     proxy_redirect     off;
 
@@ -36,7 +36,7 @@ server {
     proxy_set_header   X-Forwarded-Proto    $scheme;
   }
 
-  location / {
+  location ~ ^/(?!api) {
     proxy_pass http://frontend:8080;
     proxy_redirect     off;
 
