--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,15 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "react-validation": "^3.0.7",
     "sequelize": "^6.6.2",
     "validator": "^10.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
