--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dropzone": "^11.3.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
+    "react-table": "^7.7.0",
     "react-validation": "^3.0.7",
     "validator": "^12.2.0"
   },
