--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
      retries: 5
 
   backend:
-    # image:
+    image: data-upload-backend:prod
     build:
       context: backend/
       dockerfile: Dockerfile
@@ -36,7 +36,7 @@ services:
       FILE_STORAGE: /storage/
 
   nginx-frontend:
-    # image:
+    image: data-upload-nginx-frontend:prod
     build:
       context: .
       dockerfile: nginx/Dockerfile
