--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -10,8 +10,8 @@ services:
       PGPASSWORD: admin
     volumes:
       - postgres_data:/var/lib/postgresql
-    #ports:
-    # - 5432:5432
+    ports:
+    - 5432:5432
 
   postgress-initialisation:
     image: postgres:13-alpine
