--- a/nginx/site.conf.template
+++ b/nginx/site.conf.template
@@ -1,4 +1,4 @@
-# redirect all http traffic to https
+# # redirect all http traffic to https
 # server {
 #   listen 80 default_server;
 #   listen [::]:80 default_server;
@@ -6,12 +6,17 @@
 #   return 301 https://$host$request_uri;
 # }
 
+upstream backend {
+    server $BACKEND_HOST;
+}
+
 server {
 
-  listen 80;
+  # listen      443 ssl;
+  listen      80;
   server_name $SERVER_HOSTNAME;
 
-  ${SSL_CERTIFICATE}
+  $SSL_CERTIFICATE
 
   include /etc/nginx/general-security-headers.conf;
 
@@ -23,7 +28,7 @@ server {
   }
 
   location ~ /api {
-    proxy_pass http://localhost:8080;
+    proxy_pass http://backend;
     proxy_redirect     off;
 
     proxy_set_header   Host                 $host;
