--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -10,8 +10,8 @@ services:
       PGPASSWORD: admin
     volumes:
       - postgres_data:/var/lib/postgresql
-    #ports:
-    # - 5432:5432
+    ports:
+    - 5432:5432
 
   postgress-initialisation:
     image: postgres:13-alpine
@@ -36,10 +36,10 @@ services:
       - ./backend:/src/app
       - ./backend/storage:/storage
     environment:
-      PGHOST: postgres
-      PGDATABASE: testdb
-      PGUSER: admin
-      PGPASSWORD: admin
+      DB_HOST: postgres
+      DB_NAME: testdb
+      DB_USER: admin
+      DB_PASSWORD: admin
       PORT: 8080
       SECRET: 'my-secret'
       RESET: ${RESET:-'false'}
@@ -67,6 +67,7 @@ services:
     volumes:
       - ./nginx/nginx-headers.conf:/etc/nginx/general-security-headers.conf
       - ./nginx/site.dev.conf:/etc/nginx/conf.d/default.conf
+    command: nginx -g 'daemon off;'
 
 volumes:
   postgres_data:
