Intégration dans les environnements du path pour le stockage afin de fournir des environnements pour les sous-projet type Data360

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       dockerfile: Dockerfile
     restart: unless-stopped
     ports:
-     - "${PORT}:${PORT}"
+     - "${PORT:-8080}:${PORT:-8080}"
     depends_on:
       postgres:
         condition: service_healthy
