--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -30,8 +30,6 @@ services:
     build:
       context: backend/
       dockerfile: Dockerfile
-    # ports:
-    #   - 8080:8080
     volumes:
       - ./backend:/src/app
       - ./backend/storage:/storage
@@ -67,7 +65,7 @@ services:
     volumes:
       - ./nginx/nginx-headers.conf:/etc/nginx/general-security-headers.conf
       - ./nginx/site.dev.conf:/etc/nginx/conf.d/default.conf
-    command: nginx -g 'daemon off;'
+    command: sh -c "cat /etc/nginx/conf.d/default.conf ; nginx -g 'daemon off;'"
 
 volumes:
   postgres_data:
