--- a/nginx/site.dev.conf
+++ b/nginx/site.dev.conf
@@ -1,18 +1,32 @@
+map $http_upgrade $connection_upgrade {
+  default upgrade;
+  ''      close;
+}
+
 server {
 
-  listen      80;
-  server_name localhost;
+  listen 80;
+  server_name locahost;
 
   include /etc/nginx/general-security-headers.conf;
 
   location = / {
+    proxy_pass http://frontend:8080;
+    proxy_redirect     off;
+
+    proxy_set_header   Host                 $host;
+    proxy_set_header   X-Real-IP            $remote_addr;
+    proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Proto    $scheme;
+
+    add_header X-pass-by '=/';
       root   /var/www/html;
       index  index.html index.htm;
       include  /etc/nginx/mime.types;
       try_files $uri $uri/ /index.html;
   }
 
-  location ~ /api {
+  location ~ ^/api {
     proxy_pass http://backend:8080;
     proxy_redirect     off;
 
@@ -20,19 +34,31 @@ server {
     proxy_set_header   X-Real-IP            $remote_addr;
     proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
     proxy_set_header   X-Forwarded-Proto    $scheme;
+
+    add_header X-pass-by '/api';
   }
 
   location ~ ^/(?!api) {
-      root   /var/www/html;
-      index  index.html index.htm;
-      include  /etc/nginx/mime.types;
-      try_files $uri $uri/ /index.html;
+    proxy_pass http://frontend:8080;
+    proxy_redirect     off;
+
+    proxy_set_header   Host                 $host;
+    proxy_set_header   X-Real-IP            $remote_addr;
+    proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Proto    $scheme;
+
+    # this enables proxying for websockets, which is used to hot reload
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+
+    add_header X-pass-by '/';
   }
 
   error_page   500 502 503 504  /50x.html;
 
   location = /50x.html {
-    root   /var/www/html;
+    root   /usr/share/nginx/html;
   }
 
 }
