Remplacement du mot 'environnement' par 'index'

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,9 @@ services:
       SSL_CERTIFICATE: ${SSL_CERTIFICATE}
       BACKEND_HOST: ${BACKEND_HOST}
 
+  # orchestrator:
+
+
 volumes:
   postgres_data:
   data_upload_data:
