--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -10,8 +10,6 @@ services:
       PGPASSWORD: admin
     volumes:
       - postgres_data:/var/lib/postgresql
-    ports:
-    - 5432:5432
 
   postgress-initialisation:
     image: postgres:13-alpine
@@ -30,8 +28,6 @@ services:
     build:
       context: backend/
       dockerfile: Dockerfile
-    # ports:
-    #   - 8080:8080
     volumes:
       - ./backend:/src/app
       - ./backend/storage:/storage
@@ -67,7 +63,7 @@ services:
     volumes:
       - ./nginx/nginx-headers.conf:/etc/nginx/general-security-headers.conf
       - ./nginx/site.dev.conf:/etc/nginx/conf.d/default.conf
-    command: nginx -g 'daemon off;'
+    command: sh -c "cat /etc/nginx/conf.d/default.conf ; nginx -g 'daemon off;'"
 
 volumes:
   postgres_data:
