--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       PGPASSWORD: ${PGPASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql
-    ports:
-    - 5432:5432
+    #ports:
+    #- 5432:5432
     healthcheck:
      test: ["CMD-SHELL", "pg_isready -U admin"]
      interval: 10s
@@ -41,7 +41,7 @@ services:
       dockerfile: Dockerfile
     restart: unless-stopped
     ports:
-     - "${PORT}:${PORT}"
+     - "${PORT:-8080}:${PORT:-8080}"
     depends_on:
       postgres:
         condition: service_healthy
@@ -73,6 +73,9 @@ services:
       SERVER_HOSTNAME: ${SERVER_HOSTNAME}
       SSL_CERTIFICATE: ${SSL_CERTIFICATE}
       BACKEND_HOST: ${BACKEND_HOST}
+
+  # orchestrator:
+
 
 volumes:
   postgres_data:
