--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       PGPASSWORD: ${PGPASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql
-    #ports:
-    #- 5432:5432
+    # ports:
+    #   - 5432:5432
     healthcheck:
      test: ["CMD-SHELL", "pg_isready -U admin"]
      interval: 10s
@@ -46,7 +46,7 @@ services:
       postgres:
         condition: service_healthy
     volumes:
-      - data_upload_data:/storage
+      - data:/storage
     environment:
       RESET: ${RESET:-false}
       DB_HOST: ${PGHOST}
@@ -74,9 +74,6 @@ services:
       SSL_CERTIFICATE: ${SSL_CERTIFICATE}
       BACKEND_HOST: ${BACKEND_HOST}
 
-  # orchestrator:
-
-
 volumes:
   postgres_data:
-  data_upload_data:
+  data:
