--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -1,6 +1,20 @@
 version: "3.9"
 
-services:
+services:   
+
+  node:
+    build:
+      context: backend/
+      dockerfile: Dockerfile 
+    ports:
+      - '3000:3000'  
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    restart: always
+    ports:
+      - 1025:1025
+      - 8025:8025
 
   postgres:
     environment:
