--- a/backend/package.json
+++ b/backend/package.json
@@ -10,13 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-session": "^1.17.2",
+    "generate-password": "^1.6.1",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.6.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "password-validator": "^5.1.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "react-validation": "^3.0.7",
@@ -24,6 +32,16 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.1.7",
+    "@types/express-session": "^1.17.4",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/morgan": "^1.9.3",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "nodemon": "^2.0.7"
   }
 }
