Ajout de la page de modification du mot de passe

--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -68,5 +68,13 @@ services:
       - ./nginx/site.dev.conf:/etc/nginx/conf.d/default.conf
     command: sh -c "cat /etc/nginx/conf.d/default.conf ; nginx -g 'daemon off;'"
 
+
+  mailhog:
+    image: mailhog/mailhog
+    restart: unless-stopped
+    ports:
+      - 1025:1025 # SMTP
+      - 8025:8025 # Wweb interface
+
 volumes:
   postgres_data:
