--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "express-session": "^1.17.2",
     "generate-password": "^1.6.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
+    "mustache": "^4.2.0",
     "nodemailer": "^6.6.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -29,6 +31,7 @@
     "pg-hstore": "^2.3.3",
     "react-validation": "^3.0.7",
     "sequelize": "^6.6.2",
+    "uuid": "^8.3.2",
     "validator": "^10.11.0"
   },
   "devDependencies": {
@@ -38,10 +41,15 @@
     "@types/express-fileupload": "^1.1.7",
     "@types/express-session": "^1.17.4",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.30",
     "@types/morgan": "^1.9.3",
+    "@types/mustache": "^4.1.2",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.7"
   }
 }
