--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -8,6 +8,8 @@ services:
       POSTGRES_USER: admin
       PGUSER: admin
       PGPASSWORD: admin
+    ports:
+      - 5432:5432
     volumes:
       - postgres_data:/var/lib/postgresql
 
@@ -43,6 +45,7 @@ services:
       ADMIN_PASSWORD: admin
       ADMIN_EMAIL: admin@admin.admin
       FILE_STORAGE: /storage/
+      PASSWORD_STRENGH_VALIDATION: 'false'
     command: ./node_modules/nodemon/bin/nodemon.js -L /src/app/server.js
 
   frontend:
@@ -64,6 +67,14 @@ services:
       - ./nginx/nginx-headers.conf:/etc/nginx/general-security-headers.conf
       - ./nginx/site.dev.conf:/etc/nginx/conf.d/default.conf
     command: sh -c "cat /etc/nginx/conf.d/default.conf ; nginx -g 'daemon off;'"
+
+
+  mailhog:
+    image: mailhog/mailhog
+    restart: unless-stopped
+    ports:
+      - 1025:1025 # SMTP
+      - 8025:8025 # Wweb interface
 
 volumes:
   postgres_data:
