Ajout d'une dépendance manquante dans la CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,8 @@ jobs:
           - run:
               name: Installation des dépendances système
               command: |
-                  apk add --no-cache curl py-pip python3-dev libffi-dev openssl-dev gcc libc-dev rust cargo make
-                  curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-                  chmod +x /usr/local/bin/docker-compose
-                  ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+                  apk add --no-cache docker-compose bash
+          - setup_remote_docker
           - run:
               name: construction des images
               command: |
