--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,17 +2,18 @@
   "name": "react-jwt-auth",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^4.4.1",
-    "multiselect-react-dropdown": "^2.0.4",
+    "multiselect-react-dropdown": "^2.0.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-dropzone": "^11.3.2",
-    "react-router-dom": "^5.1.2",
+    "react-dropzone": "^11.3.4",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-table": "^7.7.0",
     "react-validation": "^3.0.7",
