--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -56,6 +56,7 @@ services:
     restart: unless-stopped
     environment:
       PORT: 8080
+      PUBLIC_URL: ${PUBLIC_URL}
     volumes:
       - ./frontend/:/src/app/
 
@@ -63,11 +64,13 @@ services:
     image: nginx:dev
     ports:
       - 80:80
+    environment:
+      SERVER_HOSTNAME: localhost
+      BACKEND_HOST: ${BACKEND_HOST:-backend}
+      LISTEN: 80
     volumes:
       - ./nginx/nginx-headers.conf:/etc/nginx/general-security-headers.conf
-      - ./nginx/site.dev.conf:/etc/nginx/conf.d/default.conf
-    command: sh -c "cat /etc/nginx/conf.d/default.conf ; nginx -g 'daemon off;'"
-
+      - ./nginx/site.dev.conf.template:/etc/nginx/conf.d/default.conf.template
 
   mailhog:
     image: mailhog/mailhog
