--- a/nginx/site.dev.conf.template
+++ b/nginx/site.dev.conf.template
@@ -5,12 +5,14 @@ map $http_upgrade $connection_upgrade {
 
 server {
 
-  listen 80;
-  server_name locahost;
+  listen $LISTEN;
+  server_name $SERVER_HOSTNAME;
+
+  $SSL_CERTIFICATE
 
   include /etc/nginx/general-security-headers.conf;
 
-  location = / {
+  location = $PUBLIC_URL {
     proxy_pass http://frontend:8080;
     proxy_redirect     off;
 
@@ -19,14 +21,10 @@ server {
     proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
     proxy_set_header   X-Forwarded-Proto    $scheme;
 
-    add_header X-pass-by '=/';
-      root   /var/www/html;
-      index  index.html index.htm;
-      include  /etc/nginx/mime.types;
-      try_files $uri $uri/ /index.html;
+    add_header X-pass-by '=$PUBLIC_URL/';
   }
 
-  location ~ ^/api {
+  location ~ ^$PUBLIC_URL/api {
     proxy_pass http://backend:8080;
     proxy_redirect     off;
 
@@ -35,10 +33,20 @@ server {
     proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
     proxy_set_header   X-Forwarded-Proto    $scheme;
 
-    add_header X-pass-by '/api';
+    add_header X-pass-by '$PUBLIC_URL/api';
   }
 
-  location ~ ^/(?!api) {
+  location ~ ^$PUBLIC_URL/(?!api) {
+    proxy_pass http://frontend:8080;
+    proxy_redirect     off;
+
+    proxy_set_header   Host                 $host;
+    proxy_set_header   X-Real-IP            $remote_addr;
+    proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Proto    $scheme;
+  }
+
+  location ~ ^/sockjs-node {
     proxy_pass http://frontend:8080;
     proxy_redirect     off;
 
@@ -51,8 +59,7 @@ server {
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
-
-    add_header X-pass-by '/';
+    add_header X-pass-by '/sockjs-node';
   }
 
   error_page   500 502 503 504  /50x.html;
