--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-unique-token": "^3.0.0",
     "password-validator": "^5.1.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
@@ -47,6 +48,7 @@
     "@types/mustache": "^4.1.2",
     "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
+    "@types/passport-unique-token": "^1.0.3",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/uuid": "^8.3.1",
